create my website

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -31,7 +31,7 @@
 <body>
     <nav id="nav">
         <div class="navLinks">
-            <a href="home.html">
+            <a href="index.html">
                 <div class="navLink">Home</div>
             </a>
             <a href="aboutMe.html">
