--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
 <body>
     <nav id="nav">
         <div class="navLinks">
-            <a href="home.html">
+            <a href="index.html">
                 <div class="navLink">Home</div>
             </a>
             <a href="aboutMe.html">
