--- a/projects.html
+++ b/projects.html
@@ -42,9 +42,9 @@
            <div class="row">
                <div class="column">
                    
-                   <img src=../images/money.jpg>
+                   <img src=../images/money.JPG>
                    <img src=../images/balm.jpg>
-                   <img src=../images/vote.jpg>
+                   <img src=../images/vote.JPG>
                    <img src=../images/facemasks.jpg>
 
                </div>
@@ -55,7 +55,7 @@
                </div>
                <div class="column">
                    <img src=../images/shirt1.jpg>
-                   <img src=../images/anshirt.jpg>
+                   <img src=../images/anshirt.JPG>
                    <img src=../images/shirt2.jpg>
                </div>
 
