--- a/contact.html
+++ b/contact.html
@@ -45,6 +45,12 @@
     <div id="pageBody">
         <div class="contactContent">
             <h1> Email: </h1>
+            <h2><a href="project3.html">
+                <div class="navLink">Project 3</div>
+            </a>
+            <a href="project2.html">
+                <div class="navLink">Project 2</div>
+            </a></h2>
             <p> Personal: jjm324@gmail.com OR jholmes64@gatech.edu </p>
             <p> Shop inquiries: bluelightresin@gmail.com
             </p>
